# ctlearn

./: .gitignore  .landscape.yml  .readthedocs.yaml  .travis.yml  .zenodo.json  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  GSoC-2019 : Regression  GSoC2020: ROOT input  GSoC2020_ROOT_project  GSoC_2019 PR: Hexagonal Convolution  GSoC_2020_jh.txt  HexaConv.md  LICENSE  MAGIC_root_interpolation.ipynb  MANIFEST.in  README.md  README.rst  ROOT_reader_sample.ipynb  Regression.md  alexnet.py  codemeta.json  condaenv.vowayxih.requirements.txt  config.ini  count_types.py  debugging.py  environment-cluster.yml  environment-cpu.yml  environment-gpu.yml  environment-macos.yml  environment-pytorch.yml  environment-tensorflow.yml  environment-win-cpu.yml  environment-win-gpu.yml  environment.yml  example_config.ini  gammaNNv1.py  gsoc-2019-ROOT-input-proposal  monitoring_gpus.py  (+15 more)
.github/: versionScript.py
CTGANs/: .gitignore  GANs.py  README.md  callback.py  data_generator.py  data_loader.py  discriminator.py  evaluate.py  generator.py  main.py  predictor.py
GSOC-2019-ROOT-Input/: GSOC2019_PR.html  GSOC2019_PR.ipynb  ROOT Inpue Description  zmumu_data.hdf5
bayesian_optimization/: Readme.md  bayesian_tpe.py  common.py  data_predict.txt  data_train.txt  myconfig.yml  opt_config.yml  opt_config_develop.yml  optimizer.py  setup.py
calibration/: calibration.py  undistort.py
conda/: conda_build_config.yaml  meta.yaml
config/: CNNRNN.yml  ctlearn_single-tel_hexconv_benchmark_config.yml  example_config.yml  example_config_param.yml
ctalearn/: data.py  data_input.py  data_loading.py  data_processing.py  image.py  image_mapping.py  run_model.py
ctlearn/: __init__.py  build_irf.py  conftest.py  ct_heads.py  ct_losses.py  ctapipe_plugin.py  data_loader.py  data_loading.py  data_processing.py  hexaconv.py  image_mapping.py  output_handler.py  run_model.py  utils.py  version.py  versionScript.py
ctlearn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: requirements.txt
gpu_logging/: plot_gpu_util.py
images/: TRN-single-tel.drawio  ctlearn.drawio  ctlearn_uml.drawio  ctlearn_wokflow.drawio.html
keras_theano/: run_logs.txt
misc/: Makefile  README.txt  apply_cuts.sh  apply_energy_cuts.sh  example_config.ini  generateBinLists.C  generateEventList.C  generateImageList  generateImageList.C  generate_image_lists.sh  plotBDT.C  plotBDT.py  plotImgPars  plotImgPars.C  plot_classifier_value.py  plot_roc_curves.py  sort_lists.sh  test_metadata.py  train_configurations.py
models/: AlexNet.py  VGG16.py  VGG16_pretrained.py  alexnet.py  basic.py  cnn_rnn.py  custom_multi_input.py  densenet.py  gammaNNv1.py  mobilenet.py  mvcnn.py  resnet.py  single_tel.py  testNet.py  variable_input_model.py
notebooks/: Muon_impact_reco_CTLearn.ipynb  lstmono_ctlearn.ipynb  plot_run_model_results.ipynb  test_hex_image_mapper.ipynb  test_image_mapper.ipynb
scripts/: append_subarray_table.py  auto_configuration.py  enforce_same_events.py  evaluate.py  generate_ICRC_CTLearnplots.py  generate_ICRCplots.py  get_prediction_acc_auc.py  merge_subarray_table.py  mobilenet.py  overwrite_isvalid_flag.py  overwrite_table.py  pickle_reconstructor.py  plot.py  plot_camera_image.py  plot_classifier_values.py  plot_roc_curves.py  predict.py  predict_plot_classifier_curve.py  print_dataset_metadata.py  print_run_metadata.py  rename_run_folders.sh  run_ctlearn_on_Wilkes3.sh  run_multiple_configurations.py  summarize_results.py  train.py  train_class_weights_hardcoded.py  train_cnn.py  train_configurations.py  train_custom_multi_input.py  train_datasets.py  train_feed_dict.py  train_inceptionv3.py  train_inceptionv3_lrs.py  (+5 more)
(+437 files in other folders)
