[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "CTLearn"
description = "CTLearn is a package under active development to run deep learning models to analyze data from all major current and future arrays of imaging atmospheric Cherenkov telescopes (IACTs)."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Ari Brill"},
    {name = "Bryan Kim"},
    {name = "Tjark Miener"},
    {name = "Daniel Nieto", email = "d.nieto@ucm.es"}
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"
dependencies = [
    "dl1_data_handler>=0.14.1, <0.15",
    "astropy",
    "numpy",
    "pandas",
    "pip",
    "pyyaml",
    "scikit-learn",
    "numba",
    "tensorflow>=2.14,<2.15",
    "pydot",
    "setuptools",
    "ctapipe>=0.22.0, <0.24",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["ctlearn"]

[project.optional-dependencies]
doc = [
  "sphinx",
  "sphinx-rtd-theme",
]
# self reference allows all to be defined in terms of other extras
all = ["ctlearn[doc]"]

[project.urls]
repository = "https://github.com/ctlearn-project/ctlearn"
documentation = "https://ctlearn.readthedocs.io/en/latest/"

[project.scripts]
ctlearn-train-model = "ctlearn.tools.train_model:main"
ctlearn-predict-mono-model = "ctlearn.tools.predict_model:mono_tool"
ctlearn-predict-stereo-model = "ctlearn.tools.predict_model:stereo_tool"
ctlearn-predict-LST1= "ctlearn.tools.predict_LST1:main"

[tool.setuptools_scm]
version_file = "ctlearn/_version.py"

[tool.pytest.ini_options]
testpaths = ["ctlearn"]

norecursedirs = [
    ".git",
    "notebooks",
    "build",
    "scripts",
    "docs",
    "images"
]
